--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
             "email": "tomas@pecserke.eu"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "beta",
     "require": {
         "php": ">=5.3.2",
         "symfony/framework-bundle": "~2.3",
