--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,13 @@
     "minimum-stability": "beta",
     "require": {
         "php": ">=5.3.2",
+        "publero/code-generator": "dev-master",
         "symfony/framework-bundle": "~2.3",
         "symfony/security-bundle": "~2.3"
     },
     "require-dev": {
         "doctrine/doctrine-bundle": "*",
-        "symfony/yaml": "~2.1"
+        "symfony/yaml": "~2.3"
     },
     "suggest": {
         "doctrine/doctrine-bundle": "Needed when using the ORM for access token storage",
